--- a/app/src/main/res/layout/dialog_edit_worker_bio.xml
+++ b/app/src/main/res/layout/dialog_edit_worker_bio.xml
@@ -17,9 +17,10 @@
     <EditText
         android:id="@+id/job_details_input"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:background="@android:color/transparent"
         android:gravity="top"
+        android:scrollbars="vertical"
         android:inputType="textCapSentences|textMultiLine"
         android:minLines="3"
         android:padding="6dp" />
